force-app/main/default/objects/Previous_Address__c/Previous_Address__c.object-meta.xml
<CustomObject>
    <description>Previous Address</description>
    <label>Previous Address</label>
    <nameField>
        <displayFormat>PA- {00000000}</displayFormat>
        <label>Previous Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>