force-app/main/default/objects/Previous_Address__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Previous Addresses</relationshipLabel>
    <relationshipName>Previous_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>