force-app/main/default/objects/Previous_Address__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <formula>Mortgage_Case__r.Customer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer_Id</label>
    <type>Text</type>
</CustomField>