force-app/main/default/objects/Previous_Address__c/fields/Is_this_a_BPO_non_UK_address__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_BPO_non_UK_address__c</fullName>
    <label>Is this a BPO/non UK address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>