force-app/main/default/objects/Previous_Address__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>Previous Addresses</relationshipLabel>
    <relationshipName>Previous_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>