force-app/main/default/objects/Previous_Address__c/fields/Moved_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Moved_In_Date__c</fullName>
    <label>Moved In Date</label>
    <type>Date</type>
</CustomField>