force-app/main/default/objects/Previous_Address__c/fields/Moved_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Moved_Out_Date__c</fullName>
    <label>Moved Out Date</label>
    <type>Date</type>
</CustomField>