force-app/main/default/objects/Previous_Address__c/fields/Protection_Case__c.field-meta.xml
<CustomField>
    <fullName>Protection_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protection Case</label>
    <referenceTo>Protection_Case__c</referenceTo>
    <relationshipLabel>Previous Addresses</relationshipLabel>
    <relationshipName>Previous_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>